--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
     
+    <form>
+        <label for="playerX_name">Player X Name:</label>
+        <input type="text" id="playerX_name" name="playerX_n">
+        <label for="playerY_name">Player Y Name:</label>
+        <input type="text" id="playerY_name" name="playerY_n">
+    </form>
+    <button class="newgame-btn" type="button">New Game</button>
 </body>
 </html>
