Almost finished, css needs to be added, i added a announcer that display which player turn is and who won or if its a draw

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    
+    <div class="board-container"></div>
+    <p class="player-turn-text"></p>
     <form>
         <label for="playerX_name">Player X Name:</label>
         <input type="text" id="playerX_name" name="playerX_n">
         <label for="playerY_name">Player Y Name:</label>
         <input type="text" id="playerY_name" name="playerY_n">
     </form>
-    <button class="newgame-btn" type="button">New Game</button>
+    <button class="newgame-btn" type="button">Begin Game</button>
 </body>
 </html>
